--- a/files/page_2_邮箱已发送/styles.css
+++ b/files/page_2_邮箱已发送/styles.css
@@ -27,7 +27,7 @@
   top:99px;
   width:604px;
   height:81px;
-  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑 Regular', '微软雅黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
